# LOLDrivers

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CODUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPERS.md  PHASE3_COMPLETION_REPORT.md  README.md  YML-Template.yml  drivers.csv  drivers.csv.bk  drivers.csv.bk2  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
detections/lacework/: LOLDriver_Malicious_Hashes.yaml  README.md  loldriver_lql_gen.py  pyproject.toml
drivers/: ADV64DRV.sys_778b7feea3c750d44745d3bf294bd4ce  ALSysIO.sys_13dda15ef67eb265869fc371c72d6ef0  ALSysIO.sys_ba5f0f6347780c2ed911bbf888e75bef  AMDPowerProfiler.sys_e4266262a77fffdea2584283f6c4f51d  AMDRyzenMasterDriver.sys_13ee349c15ee5d6cf640b3d0111ffc0e  ATSZIO.sys_b12d1630fd50b2a21fd91e45d522ba3a  Agent64.sys_1ed08a6264c5c92099d6d1dae5e8f530  Agent64.sys_29ccff428e5eb70ae429c3da8968e1ec  Agent64.sys_8407ddfab85ae664e507c30314090385  Agent64.sys_a57b47489febc552515778dd0fd1e51c  Agent64.sys_ddc2ffe0ab3fcd48db898ab13c38d88d  AsrAutoChkUpdDrv.sys_75d6c3469347de1cdfa3b1b9f1544208  AsrDrv.sys_12908c285b9d68ee1f39186110df0f1e  AsrDrv.sys_1a234f4643f5658bab07bfa611282267  AsrDrv.sys_2003b478b9fd1b3d76ec5bf4172c2e8915babbbee7ad1783794acbf8d4c2519d  AsrDrv.sys_4f27c09cc8680e06b04d6a9c34ca1e08  AsrDrv.sys_9b91a44a488e4d539f2e55476b216024  AsrDrv.sys_a7c2e7910942dd5e43e2f4eb159bcd2b4e71366e34a68109548b9fb12ac0f7cc  AsrDrv.sys_de1cc5c266140bff9d964fab87a29421  BSMI.sys_552f70374715e70c4ade591d65177be2539ec60f751223680dfaccb9e0be0ed9  BSMI.sys_fac8eb49e2fd541b81fcbdeb98a199cb  DCR.sys  (+139 more)
(+5072 files in other folders)
